load and display all lessons

--- a/index.html
+++ b/index.html
@@ -66,23 +66,34 @@
     <section class="flex flex-col-reverse md:flex-row justify-between items-center gap-5 py-4 w-11/12 mx-auto">
         <div class="flex-1 text-center md:text-left">
             <h1 class="text-4xl font-bold pb-4"><span class="text-[#00BCFF]">English</span> is easy!!</h1>
-            <p class="text-2xl font-medium pb-5"><span class="font-bangla">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি
+            <p class="text-2xl font-medium pb-5"><span class="font-bangla">আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন।
+                    আপনি
                     যদি নতুন হন অথবা আপনার দক্ষতা বাড়াতে চান, আমাদের</span> Interactive
                 Lessons <span class="font-bangla">আপনাকে নিয়ে যাবে অন্য একটি</span> Level <span class="font-bangla">
                     এ</span></p>
-            <label class="floating-label pb-2">
-                <input type="text" placeholder="Enter Your Name" class="input input-md" />
-                
+            <label class="floating-label pb-2 w-full max-w-xs mx-auto md:mx-0 block">
+                <input type="text" placeholder="Enter Your Name" class="input input-md w-full" />
             </label>
-            <label class="floating-label pb-2">
-                <input type="password" placeholder="Enter Your Password" class="input input-md" />
+
+            <label class="floating-label pb-2 w-full max-w-xs mx-auto md:mx-0 block">
+                <input type="password" placeholder="Enter Your Password" class="input input-md w-full" />
             </label>
-            <button class="btn btn-primary">Get Started</button>
+
+            <button class="btn btn-primary w-full max-w-xs mx-auto md:mx-0 block">
+                Get Started
+            </button>
+
         </div>
         <div class="image flex-1">
             <img src="./assets/hero-student.png" alt="">
         </div>
     </section>
+    <section>
+        <div id="level-container" class="flex justify-center gap-5 pb-3 flex-wrap">
+
+        </div>
+    </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
