Design & Display Dynamic cards

--- a/index.html
+++ b/index.html
@@ -89,9 +89,14 @@
         </div>
     </section>
     <section>
+        <h2 class="text-center pb-9 text-4xl font-bold"><span class="text-[#00BCFF]">Let's</span> Learn Vocabularies</h2>
         <div id="level-container" class="flex justify-center gap-5 pb-3 flex-wrap">
 
         </div>
+    </section>
+    <section id="word-container" class="bg-gray-200 p-10 w-11/12 mx-auto grid grid-cols-1 md:grid-cols-3 gap-3 " >
+      
+
     </section>
     <script src="script.js"></script>
 </body>
